tests/specs/node/dynamic_import_and_require_dual/resolution_mode_require.out
Check file:///[WILDLINE]/resolution_mode_require.mts
TS2322 [ERROR]: Type '"other"' is not assignable to type '"cjs"'.
const test: typeof kind = "other";
      ~~~~
    at file:///[WILDLINE]/resolution_mode_require.mts:5:7

error: Type checking failed.
