tests/specs/node/dynamic_import_and_require_dual/resolution_mode_require.mts
import type { kind } from "package" with {
  "resolution-mode": "require",
};

const test: typeof kind = "other";
console.log(test);
